show result table in UI

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/PlasmaLampe/IndexedDBBenchmark#readme",
   "dependencies": {
+    "html-tablify": "^2.0.2",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
